--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 bower_components
-/build/old_rundbriefe-app-1.0.xar
+/build/old_salzarchiv-1.0.xar
 /tryouts/hansi.xql
 /WhoAreYou.rdf
 /build/dsebaseapp-1.0.xar
 /build/old_dsebaseapp-1.0.xar
-/build/rundbriefe-app-1.0.xar
+/build/salzarchiv-1.0.xar
 /data/editions/test.xml
